--- a/index.html
+++ b/index.html
@@ -161,3 +161,5 @@ function Pagina(nropagina){
 
 </body>
 </html>
+
+<center><a href="https://www.cerotec.net/estadisticas-99384/github.com" title="contador de visitas"><img src="https://www.cerotec.net/contador.php?t=5&s=3&i=99384"></a> 
